# buildadeck

./: README.md  pyproject.toml  setup.cfg  setup.py
src/buildadeck/: __init__.py  buildadeck.py  utils.py
tests/: buildadeck_tests.py
