[metadata]
name = buildadeck
version = 1.0.1
description = Build-a-Deck, general purpose deck creation and conveniences.
long_description = file: README.md, LICENSE.txt
license = Mozilla Public License 2.0
author = Wizard Toast
keywords = build deck, build a deck, buildadeck, build-a-deck, card, cards, deck, decks, deck build, deck builder, deck building, easy deck, easy deck build, playing cards
url = https://github.com/Wizard-Toast/buildadeck

[options]
install_requires = python_version >= "3.8"
packages = find:
package_dir =
    =src

[options.packages.find]
where = src