[metadata]
name = buildadeck
version = 1.0.1
description = Build-a-Deck, general purpose deck creation and conveniences.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Wizard-Toast/buildadeck
author = Wizard Toast
license = Mozilla Public License 2.0
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
keywords =
    build deck
    build a deck
    buildadeck
    build-a-deck
    card
    cards
    deck
    decks
    deck build
    deck builder
    deck building
    easy deck
    easy deck build
    playing cards
project_urls =
    Bug Tracker = https://github.com/Wizard-Toast/buildadeck/issues
license_file = LICENSE
license_files = LICENSE

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
